--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 p{
     background-color: goldenrod;
     text-align: center;
-    
+    color:red;
+    text-align: justify;
+    font-size: 28px;
 }
